added web workers

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dc": "1.x",
     "leaflet": "0.7.x",
     "leaflet.markercluster": "0.4.x",
+    "leaflet-providers": "1.x",
+    "leaflet-search": "1.4.x",
     "requirejs": "2.x",
     "coffee-script": "1.x",
     "less": "1.x"
