added font-awesome to packages

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "jquery": "2.x",
     "twitter-bootstrap-3.0.0": "3.x",
+    "font-awesome": "4.x",
     "underscore": "1.x",
     "mustache": "0.8.x",
     "backbone": "1.x",
