--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ tools/ckandownloader/x*
 node_modules/
 public/js/
 public/css/
-public/lib/openlayers/lib/OpenLayers.js
+public/lib/dependencies/js/
