--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "public/lib/openlayers"]
 	path = public/lib/openlayers
-	url = git@github.com:openlayers/openlayers.git
+	url = git://github.com/openlayers/openlayers.git
