--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "leaflet-search": "1.4.x",
     "requirejs": "2.x",
     "coffee-script": "1.x",
-    "less": "1.x"
+    "less": "1.x",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-less": "~0.11.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-autoprefixer": "~0.7.3"
   }
 }
