--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-less": "~0.11.0",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-autoprefixer": "~0.7.3"
+    "grunt-autoprefixer": "~0.7.3",
+    "grunt-coffeelint": "0.0.10"
   }
 }
