--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-autoprefixer": "~0.7.3",
-    "grunt-coffeelint": "0.0.10"
+    "grunt-coffeelint": "0.0.10",
+    "grunt-contrib-copy": "~0.5.0"
   }
 }
