--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -5,14 +5,14 @@
     "angular": "~1.2",
     "json3": "~3",
     "es5-shim": "~3",
-    "bootstrap": "~3",
-    "bootswatch": "~3",
     "angular-resource": "~1.2",
     "angular-cookies": "~1.2",
     "angular-sanitize": "~1.2",
     "angular-animate": "~1.2",
     "angular-route": "~1.2",
-    "userapp-angular": "~2"
+    "angular-cookie": "~4",
+    "angular-bootstrap": "~0.11",
+    "bootswatch-dist": "3.2.0-darkly"
   },
   "devDependencies": {
     "angular-mocks": "~1.2",
