--- a/www-src/dataplay-ui/package.json
+++ b/www-src/dataplay-ui/package.json
@@ -31,12 +31,14 @@
 		"karma-jasmine": "^0.1.5",
 		"karma-phantomjs-launcher": "^0.1.4",
 		"load-grunt-tasks": "^0.4.0",
-		"time-grunt": "^0.3.1"
+		"time-grunt": "^0.3.1",
+		"bower": "^1.3.8"
 	},
 	"engines": {
 		"node": ">=0.10.0"
 	},
 	"scripts": {
+		"postinstall": "bower install",
 		"test": "grunt test"
 	}
 }
