Added request monitoring for API calls. Visible performance metrics for JCatascopia.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ src/dataplay/public/processing.html
 src/dataplay/public/register.html
 src/dataplay/public/search.html
 src/dataplay/public/signin.html
+stress/concurrent.sh
