--- a/package.json
+++ b/package.json
@@ -6,27 +6,27 @@
   "license": "All Rights Reserved",
   "private": "true",
   "devDependencies": {
-    "jquery": "2.x",
-    "twitter-bootstrap-3.0.0": "3.x",
-    "underscore": "1.x",
-    "backbone": "1.x",
-    "crossfilter": "1.x",
-    "d3": "3.x",
-    "dc": "1.x",
-    "leaflet": "0.7.x",
-    "leaflet.markercluster": "0.4.x",
-    "leaflet-providers": "1.x",
-    "leaflet-search": "1.4.x",
-    "requirejs": "2.x",
-    "coffee-script": "1.x",
-    "less": "1.x",
-    "grunt-contrib-coffee": "~0.10.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-contrib-less": "~0.11.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-autoprefixer": "~0.7.3",
-    "grunt-coffeelint": "0.0.10",
-    "grunt-contrib-copy": "~0.5.0"
+    "jquery": "^2.1.1",
+    "twitter-bootstrap-3.0.0": "^3.0.0",
+    "underscore": "^1.6.0",
+    "backbone": "^1.1.2",
+    "crossfilter": "^1.3.7",
+    "d3": "^3.4.11",
+    "dc": "^1.7.1",
+    "leaflet": "^0.7.3",
+    "leaflet.markercluster": "^0.4.0",
+    "leaflet-providers": "^1.0.7",
+    "leaflet-search": "^1.5.3",
+    "requirejs": "^2.1.14",
+    "coffee-script": "^1.7.1",
+    "less": "^1.7.3",
+    "grunt-contrib-coffee": "^0.10.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-less": "^0.11.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-autoprefixer": "^0.8.2",
+    "grunt-coffeelint": "^0.0.10",
+    "grunt-contrib-copy": "^0.5.0"
   }
 }
