--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -14,7 +14,10 @@
     "angular-route": "^1.2",
     "angular-cookie": "^4",
     "angular-bootstrap": "^0.11",
-    "bootswatch": "^3.2"
+    "bootswatch": "^3.2",
+    "crossfilter": "^1.3.7",
+    "d3": "^3.4.11",
+    "dc.js": "^1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.2",
