--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -17,7 +17,7 @@
     "bootswatch": "^3.2",
     "crossfilter": "^1.3.7",
     "d3": "^3.4.11",
-    "dc.js": "^1.7.0"
+    "angular-dc": "^0.0.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.2",
