--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -18,8 +18,7 @@
     "crossfilter": "^1.3.7",
     "d3": "^3.4.11",
     "dcjs": "master",
-    "angular-dc": "master",
-    "angular-loading-bar": "master"
+    "angular-dc": "master"
   },
   "devDependencies": {
     "angular-mocks": "^1.2",
