--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -18,7 +18,8 @@
     "crossfilter": "^1.3.7",
     "d3": "^3.4.11",
     "dcjs": "master",
-    "angular-dc": "master"
+    "angular-dc": "master",
+    "bootstrap": "^3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.2",
