--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ src/dataplay/public/register.html
 src/dataplay/public/search.html
 src/dataplay/public/signin.html
 stress/concurrent.sh
+src/dataplay/NewsFetch/__init__(scraper_script) - Copy.py
