--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -6,12 +6,12 @@
     "respond": "^1.4",
     "json3": "^3",
     "es5-shim": "^3",
-    "angular": "^1.2",
-    "angular-resource": "^1.2",
-    "angular-cookies": "^1.2",
-    "angular-sanitize": "^1.2",
-    "angular-animate": "^1.2",
-    "angular-route": "^1.2",
+    "angular": "^1.3",
+    "angular-resource": "^1.3",
+    "angular-cookies": "^1.3",
+    "angular-sanitize": "^1.3",
+    "angular-animate": "^1.3",
+    "angular-route": "^1.3",
     "angular-cookie": "^4",
     "angular-bootstrap": "^0.11",
     "bootswatch": "^3.2",
@@ -19,11 +19,12 @@
     "d3": "^3.4.11",
     "dcjs": "master",
     "angular-dc": "master",
-    "bootstrap": "^3.2"
+    "bootstrap": "^3.2",
+    "ng-tiny-scrollbar": "^0.6"
   },
   "devDependencies": {
-    "angular-mocks": "^1.2",
-    "angular-scenario": "^1.2"
+    "angular-mocks": "^1.3",
+    "angular-scenario": "^1.3"
   },
   "appPath": "app"
 }
