--- a/www-src/dataplay-ui/bower.json
+++ b/www-src/dataplay-ui/bower.json
@@ -15,6 +15,7 @@
     "angular-cookie": "^4",
     "angular-bootstrap": "^0.11",
     "bootswatch": "^3.2",
+    "font-awesome": "^4.2",
     "crossfilter": "^1.3.7",
     "d3": "^3.4.11",
     "dcjs": "master",
