HAProxy dynamic config generator API.

--- a/tools/images/scripts/app/haproxy-api/haproxy.cfg
+++ b/tools/images/scripts/app/haproxy-api/haproxy.cfg
@@ -51,9 +51,11 @@ backend masters
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     cookie SERVERID insert indirect nocache
-    {% for backend in backends %}
-    server {{ backend.id|lower }} {{ backend.endpoint }} cookie {{ backend.id|upper }} check # added on {{ backend.timestamp|date('Y-m-d H:i:s') }}
-    {% endfor %}
+    
+    server master1 109.231.121.11:3000 cookie MASTER1 check # added on 2014-09-29 19:02:05
+    
+    server master2 109.231.121.8:3000 cookie MASTER2 check # added on 2014-09-29 19:02:31
+    
 
 listen stats *:1936
     stats enable
