--- a/tools/images/scripts/app/haproxy-api/package.json
+++ b/tools/images/scripts/app/haproxy-api/package.json
@@ -5,7 +5,7 @@
 		"body-parser": "^1.9",
 		"errorhandler": "^1.2",
 		"json-file-plus": "^2.0",
-		"hogan.js": "^3.0"
+		"swig": "^1.4"
 	},
 	"devDependencies": {
 		"coffee-script": "^1.7"
