--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ src/dataplay/public/signin.html
 stress/concurrent.sh
 src/dataplay/NewsFetch/__init__(scraper_script) - Copy.py
 tools/images/scripts/app/haproxy-api/app.js
+tools/images/scripts/app/haproxy-api/haproxy.cfg
