--- a/www-src/bower.json
+++ b/www-src/bower.json
@@ -1,35 +1,32 @@
 {
-  "name": "dataplay",
-  "version": "1.0.0",
-  "dependencies": {
-    "html5shiv": "^3",
-    "respond": "^1",
-    "json3": "^3",
-    "es5-shim": "^3",
-    "bootswatch": "^3.2",
-    "font-awesome": "^4.2",
-    "angular-dc": "master",
-    "angular": "^1.3",
-    "angular-resource": "^1.3",
-    "angular-cookies": "^1.3",
-    "angular-sanitize": "^1.3",
-    "angular-animate": "^1.3",
-    "angular-route": "^1.3",
-    "angular-cookie": "^4",
-    "angular-bootstrap": "^0.11",
-    "bootswatch": "^3.2",
-    "font-awesome": "^4.2",
-    "crossfilter": "^1.3.7",
-    "d3": "^3.4.11",
-    "dcjs": "master",
-    "angular-dc": "master",
-    "angular-nvd3": "master",
-    "bootstrap": "^3.2",
-    "ng-tiny-scrollbar": "^0.6"
-  },
-  "devDependencies": {
-    "angular-mocks": "^1.3",
-    "angular-scenario": "^1.3"
-  },
-  "appPath": "app"
+	"name": "dataplay",
+	"version": "1.0.0",
+	"dependencies": {
+		"html5shiv": "^3",
+		"respond": "^1",
+		"json3": "^3",
+		"es5-shim": "^3",
+		"bootswatch": "^3.2",
+		"font-awesome": "^4.2",
+		"angular": "^1.3",
+		"angular-resource": "^1.3",
+		"angular-cookies": "^1.3",
+		"angular-sanitize": "^1.3",
+		"angular-animate": "^1.3",
+		"angular-route": "^1.3",
+		"angular-cookie": "^4",
+		"angular-bootstrap": "^0.11",
+		"angular-dc": "master",
+		"angular-nvd3": "master",
+		"ng-tiny-scrollbar": "^0.6"
+	},
+	"devDependencies": {
+		"angular-mocks": "^1.3",
+		"angular-scenario": "^1.3"
+	},
+	"resolutions": {
+		"angular": "^1.3",
+		"d3": "^3.4"
+	},
+	"appPath": "app"
 }
