--- a/www-src/package.json
+++ b/www-src/package.json
@@ -1,6 +1,9 @@
 {
 	"name": "dataplay",
-	"version": "0.0.0",
+	"version": "0.9.0",
+	"config": {
+		"unsafe-perm":true
+	},
 	"dependencies": {},
 	"devDependencies": {
 		"coffee-script": "^1.7.1",
@@ -22,7 +25,7 @@
 		"grunt-filerev": "^0.2.1",
 		"grunt-karma": "^0.8.3",
 		"grunt-newer": "^0.7.0",
-		"grunt-ngmin": "^0.0.3",
+		"grunt-ng-annotate": "^0.4",
 		"grunt-svgmin": "^0.4.0",
 		"grunt-usemin": "^2.1.1",
 		"grunt-wiredep": "^1.7.0",
