update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ stress/concurrent.sh
 src/dataplay/NewsFetch/__init__(scraper_script) - Copy.py
 tools/images/scripts/app/haproxy-api/app.js
 tools/images/scripts/app/haproxy-api/haproxy.cfg
+src/newsfetch/config.go
