Deployment scripts updates.
- Moved Cassandra restart into separate function.

- Added backup server in Flexiant Cluster

- Update to pull backups from New server

--- a/tools/deployment/db/pg_backup.config
+++ b/tools/deployment/db/pg_backup.config
@@ -44,7 +44,8 @@ WEEKS_TO_KEEP=4
 #### SETTOMGS FOR SCP TO REMOTE SERVER ###
 
 # Host
-REMOTE_BACKUP_HOST="108.61.197.87"
+# REMOTE_BACKUP_HOST="108.61.197.87"
+REMOTE_BACKUP_HOST="109.231.121.85"
 
 # Path
 REMOTE_BACKUP_PATH="/root/backups/postgresql"
