--- a/tools/deployment/loadbalancer/haproxy.cfg
+++ b/tools/deployment/loadbalancer/haproxy.cfg
@@ -1,3 +1,5 @@
+# Just a play ground
+
 global
     log /dev/log    local0
     log /dev/log    local1 notice
@@ -37,10 +39,15 @@ defaults
     option  redispatch # try another webhead if retry fails
     maxconn 10000
 
-frontend web
+frontend gamification
     bind *:80
     mode http
     default_backend masters
+
+frontend compute
+    bind *:3000
+    mode http
+    default_backend nodes
 
 backend masters
     mode http
@@ -51,9 +58,19 @@ backend masters
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     cookie SERVERID insert indirect nocache
-    server master01 109.231.121.11:80 cookie MASTER01 check
-    server master02 109.231.121.8:80 cookie MASTER02 check
-    # server master03 109.231.121.11:80 check
+    server gamification01 109.231.121.11:80 cookie MASTER01 check
+    server gamification02 109.231.121.12:80 cookie MASTER02 check
+
+backend nodes
+    mode http
+    balance roundrobin
+    option httpclose
+    option forwardfor # X-Forwarded-For header
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+    server compute01 109.231.121.111:3000 check
+    server compute02 109.231.121.112:3000 check
 
 listen stats *:1936
     stats enable
