--- a/tools/deployment/loadbalancer/api/haproxy.cfg.template
+++ b/tools/deployment/loadbalancer/api/haproxy.cfg.template
@@ -49,10 +49,10 @@ frontend gamification
     mode http
     default_backend masters
 
-frontend compute
-    bind *:3000
-    mode http
-    default_backend nodes
+#frontend compute
+#    bind *:3000
+#    mode http
+#    default_backend nodes
 
 backend masters
     mode http
@@ -68,17 +68,17 @@ backend masters
     server {{ node.id|lower }} {{ node.endpoint }} cookie {{ node.id|upper }} check # added on {{ node.timestamp|date('r') }}
     {% endfor %}
 
-backend node
-    mode http
-    balance roundrobin
-    option httpclose
-    option forwardfor # X-Forwarded-For header
-    http-request set-header X-Forwarded-Port %[dst_port]
-    http-request add-header X-Forwarded-Proto https if { ssl_fc }
-    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-    {% for node in compute %}
-    server {{ node.id|lower }} {{ node.endpoint }} check # added on {{ node.timestamp|date('r') }}
-    {% endfor %}
+#backend node
+#    mode http
+#    balance roundrobin
+#    option httpclose
+#    option forwardfor # X-Forwarded-For header
+#    http-request set-header X-Forwarded-Port %[dst_port]
+#    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+#    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+#    {% for node in compute %}
+#    server {{ node.id|lower }} {{ node.endpoint }} check # added on {{ node.timestamp|date('r') }}
+#    {% endfor %}
 
 listen stats *:1936
     stats enable
