Testing Frontend behind HAProxy.

--- a/tools/deployment/loadbalancer/api/haproxy.cfg.template
+++ b/tools/deployment/loadbalancer/api/haproxy.cfg.template
@@ -44,15 +44,29 @@ defaults
     option  redispatch # try another webhead if retry fails
     maxconn 10000
 
-frontend gamification
+frontend web
     bind *:80
     mode http
-    default_backend masters
 
-#frontend compute
-#    bind *:3000
-#    mode http
-#    default_backend nodes
+    # API traffic goes to Master cluster
+    acl api path_beg /api
+    use_backend masters if api
+
+    # Other traffic goes to Gamification server
+    default_backend gamification
+
+backend gamification
+    mode http
+    balance roundrobin
+    option httpclose
+    option forwardfor # X-Forwarded-For header
+    http-request set-header X-Forwarded-Port %[dst_port]
+    http-request add-header X-Forwarded-Proto https if { ssl_fc }
+    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
+    cookie DPSession prefix
+    {% for node in gamification %}
+    server {{ node.id|lower }} {{ node.endpoint }} cookie {{ node.id|upper }} check # added on {{ node.timestamp|date('r') }}
+    {% endfor %}
 
 backend masters
     mode http
@@ -64,21 +78,9 @@ backend masters
     option httpchk HEAD /api/ping HTTP/1.1\r\nHost:localhost
     http-check expect status 200
     cookie DPSession prefix
-    {% for node in gamification %}
+    {% for node in master %}
     server {{ node.id|lower }} {{ node.endpoint }} cookie {{ node.id|upper }} check # added on {{ node.timestamp|date('r') }}
     {% endfor %}
-
-#backend node
-#    mode http
-#    balance roundrobin
-#    option httpclose
-#    option forwardfor # X-Forwarded-For header
-#    http-request set-header X-Forwarded-Port %[dst_port]
-#    http-request add-header X-Forwarded-Proto https if { ssl_fc }
-#    option httpchk HEAD / HTTP/1.1\r\nHost:localhost
-#    {% for node in compute %}
-#    server {{ node.id|lower }} {{ node.endpoint }} check # added on {{ node.timestamp|date('r') }}
-#    {% endfor %}
 
 listen stats *:1936
     stats enable
