make sure correlated always returns something even if random tables

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ src/dataplay/NewsFetch/__init__(scraper_script) - Copy.py
 tools/deployment/loadbalancer/api/app.js
 tools/deployment/loadbalancer/api/haproxy.cfg
 src/newsfetch/config.go
+src/DP/main.go
