--- a/www-src/package.json
+++ b/www-src/package.json
@@ -5,41 +5,44 @@
 	"description": "General Purpose Dataset Visualization",
 	"private": "true",
 	"config": {
-		"unsafe-perm":true
+		"unsafe-perm": true
 	},
-	"dependencies": {},
+	"dependencies": {
+		"karma": "^0.12.31"
+	},
 	"devDependencies": {
-		"coffee-script": "^1.7.1",
-		"grunt": "^0.4.1",
+		"bower": "^1.3.8",
+		"coffee-script": "^1.9.1",
+		"grunt": "^0.4.5",
+		"grunt-angular-templates": "^0.5.7",
 		"grunt-autoprefixer": "^0.7.3",
 		"grunt-concurrent": "^0.5.0",
-		"grunt-contrib-clean": "^0.5.0",
-		"grunt-contrib-coffee": "^0.10.1",
-		"grunt-contrib-concat": "^0.4.0",
-		"grunt-contrib-connect": "^0.7.1",
-		"grunt-contrib-copy": "^0.5.0",
+		"grunt-contrib-clean": "^0.6.0",
+		"grunt-contrib-coffee": "^0.13.0",
+		"grunt-contrib-concat": "^0.5.1",
+		"grunt-contrib-connect": "^0.9.0",
+		"grunt-contrib-copy": "^0.8.0",
+		"grunt-contrib-cssmin": "^0.12.2",
+		"grunt-contrib-htmlmin": "^0.4.0",
+		"grunt-contrib-imagemin": "^0.9.3",
+		"grunt-contrib-jshint": "^0.11.0",
 		"grunt-contrib-less": "^0.11.3",
-		"grunt-contrib-cssmin": "^0.9.0",
-		"grunt-contrib-htmlmin": "^0.3.0",
-		"grunt-contrib-imagemin": "^0.7.0",
-		"grunt-contrib-jshint": "^0.10.0",
-		"grunt-contrib-uglify": "^0.4.0",
+		"grunt-contrib-uglify": "^0.8.0",
 		"grunt-contrib-watch": "^0.6.1",
 		"grunt-filerev": "^0.2.1",
-		"grunt-karma": "^0.8.3",
+		"grunt-karma": "^0.10.1",
 		"grunt-newer": "^0.7.0",
-		"grunt-ng-annotate": "^0.4",
-		"grunt-angular-templates": "^0.5.7",
+		"grunt-ng-annotate": "^0.10.0",
 		"grunt-svgmin": "^0.4.0",
 		"grunt-usemin": "^2.1.1",
 		"grunt-wiredep": "^1.7.0",
+		"jasmine-core": "^2.2.0",
 		"jshint-stylish": "^0.2.0",
 		"karma-coffee-preprocessor": "^0.2.1",
-		"karma-jasmine": "^0.1.5",
+		"karma-jasmine": "^0.3.5",
 		"karma-phantomjs-launcher": "^0.1.4",
 		"load-grunt-tasks": "^0.4.0",
-		"time-grunt": "^0.3.1",
-		"bower": "^1.3.8"
+		"time-grunt": "^0.3.1"
 	},
 	"engines": {
 		"node": ">=0.10.0"
