--- a/www-src/bower.json
+++ b/www-src/bower.json
@@ -16,8 +16,8 @@
 		"angular-route": "^1.3",
 		"angular-cookie": "^4",
 		"angular-bootstrap": "^0.11",
-		"angular-dc": "master",
-		"angular-nvd3": "master",
+		"angular-dc": "^0.0.4",
+		"angular-nvd3": "^0.0.9",
 		"ng-tiny-scrollbar": "^0.6",
 		"hello": "1.2.2"
 	},
