--- a/tools/deployment/db/pg_backup.config
+++ b/tools/deployment/db/pg_backup.config
@@ -7,7 +7,7 @@
 BACKUP_USER="postgres"
 
 # Optional hostname to adhere to pg_hba policies.  Will default to "localhost" if none specified.
-HOSTNAME="10.0.0.2"
+#HOSTNAME="10.0.0.2"
 
 # Optional username to connect to database as.  Will default to "postgres" if none specified.
 USERNAME="playgen"
@@ -15,7 +15,6 @@ USERNAME="playgen"
 # This dir will be created if it doesn't exist.  This must be writable by the user the script is
 # running as.
 BACKUP_DIR=/var/lib/postgresql/backups/
-#BACKUP_DIR=/home/backups/database/postgresql/
 
 # List of strings to match against in database name, separated by space or comma, for which we only
 # wish to keep a backup of the schema, not the data. Any database names which contain any of these
