New backup server.

--- a/tools/deployment/db/pg_backup.config
+++ b/tools/deployment/db/pg_backup.config
@@ -7,7 +7,10 @@
 BACKUP_USER="postgres"
 
 # Optional hostname to adhere to pg_hba policies.  Will default to "localhost" if none specified.
-#HOSTNAME="10.0.0.2"
+HOSTNAME="localhost"
+
+# Optional port to adhere to pg_hba policies.  Will default to "5432" if none specified.
+PORT="5432"
 
 # Optional username to connect to database as.  Will default to "postgres" if none specified.
 USERNAME="playgen"
