--- a/www-src/package.json
+++ b/www-src/package.json
@@ -8,7 +8,9 @@
 		"unsafe-perm": true
 	},
 	"dependencies": {
-		"karma": "^0.12.31"
+		"gzip-size": "^3.0.0",
+		"karma": "^0.12.31",
+		"pretty-bytes": "^2.0.1"
 	},
 	"devDependencies": {
 		"bower": "^1.3.8",
