--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ src/DP/main.go
 src/newsfetch/embedly.txt
 *.pyc
 *.rej
+tools/deployment_manual/demo.py
+tools/deployment_manual/deployment.txt
+tools/deployment_manual/scripts/
+tools/deployment_manual/test.py
