--- a/tools/deployment/db/api/pgpool.conf.template
+++ b/tools/deployment/db/api/pgpool.conf.template
@@ -39,7 +39,7 @@ pcp_socket_dir = '/var/run/postgresql'
 # - Backend Connection Settings -
 {% for node in cluster %}
 backend_hostname{{ node.id }} = '{{ node.endpoint }}'
-backend_port{{ node.id }} = '{{ node.port }}'
+backend_port{{ node.id }} = {{ node.port }}
 backend_weight{{ node.id }} = 1
 backend_data_directory{{ node.id }} = '/var/lib/postgresql/9.4/main'
 backend_flag{{ node.id }} = 'ALLOW_TO_FAILOVER'
